Почтовый сервис, постгрес, крон для уведомлений, и др. изменения
